--- a/src/main/resources/templates/admin/evaluacion/capacidad-form.html
+++ b/src/main/resources/templates/admin/evaluacion/capacidad-form.html
@@ -176,4 +176,9 @@
         </div>
     </div>
 </body>
+<th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+</th:block>
 </html>
