--- a/src/main/resources/templates/admin/evaluacion/capacidades.html
+++ b/src/main/resources/templates/admin/evaluacion/capacidades.html
@@ -137,4 +137,9 @@
             </div>
         </div>
     </div>
+    <th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+</th:block>
 </html>
