--- a/src/main/resources/templates/admin/evaluacion/form.html
+++ b/src/main/resources/templates/admin/evaluacion/form.html
@@ -192,6 +192,11 @@
         </div>
     </div>
 </div>
+<th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+
 
 <script th:if="${!soloLectura}">
     // Actualizar puntuación máxima según la capacidad seleccionada
@@ -222,3 +227,4 @@
         actualizarPuntuacionMaxima();
     });
 </script>
+</th:block>
