--- a/src/main/resources/templates/admin/evaluacion/listar.html
+++ b/src/main/resources/templates/admin/evaluacion/listar.html
@@ -200,3 +200,8 @@
         </div>
     </div>
 </div>
+<th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+</th:block>
