--- a/src/main/resources/templates/admin/reportes/report.html
+++ b/src/main/resources/templates/admin/reportes/report.html
@@ -356,6 +356,12 @@
         </div>
 
     </div>
+    </div>
+    <th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+
 
     <!-- Scripts para Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
@@ -817,4 +823,4 @@
         }
     }
     </script>
-</div>
+    </th:block>
