--- a/src/main/resources/templates/admin/alumno/listar.html
+++ b/src/main/resources/templates/admin/alumno/listar.html
@@ -162,4 +162,9 @@
         </div>
     </div>
 </div>
+<th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+</th:block>
 </html>
