--- a/src/main/resources/templates/admin/curso/form.html
+++ b/src/main/resources/templates/admin/curso/form.html
@@ -1,3 +1,4 @@
+ <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="content">
@@ -162,9 +163,4 @@
         </div>
     </div>
 </div>
-<th:block th:fragment="scripts">
-    <script>
-     console.log('Script cargado');
-    </script>
-</th:block>
 </html>
