--- a/src/main/resources/templates/alumno/dashboard.html
+++ b/src/main/resources/templates/alumno/dashboard.html
@@ -197,6 +197,10 @@
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+</th:block>
+   <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
 </div>
