--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -204,7 +204,8 @@
 
     </div>
     	<!-- Stripts de cada pagina -->
-        <th:block th:replace="${viewName} :: scripts"></th:block>
+<th:block th:if="${viewName != null}" 
+          th:replace="~{${viewName} :: scripts} ?: _"></th:block>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script th:inline="javascript">
