--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -86,7 +86,7 @@
                 <a class="nav-link" th:href="@{/admin/curso/listar}">
                     <i class="bi bi-book me-2"></i>Cursos
                 </a>
-                <a class="nav-link" th:href="@{/admin/empresa/listar}">
+                <a class="nav-link" th:href="@{/empresa/listar}">
                     <i class="bi bi-building me-2"></i>Empresas
                 </a>
                 <a class="nav-link" th:href="@{/admin/tutorcurso/listar}">
