subimos con errores a solucinar en evaluacion tutor

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -98,6 +98,9 @@
 				<a class="nav-link" th:href="@{/admin/evaluacion/listar}">
 				    <i class="bi bi-briefcase me-2"></i>Evaluaciones
 				</a>
+				<a class="nav-link" th:href="@{/evaluaciontutor/listar}">
+				    <i class="bi bi-briefcase me-2"></i>Evaluaciones Tutor
+				</a>
 				<a th:href="@{/incidencia/listar}	" class="nav-link">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencia
                  </a>	
@@ -117,6 +120,9 @@
                 <a class="nav-link" th:href="@{/tutorcurso/observaciondiaria/listar}">
                     <i class="bi bi-journal-text me-2"></i>Observaciones
                 </a>
+                <a class="nav-link" th:href="@{/evaluaciontutor/listar}">
+				    <i class="bi bi-briefcase me-2"></i>Evaluaciones Tutor
+				</a>
             </div>
             
             <!-- Tutor Prácticas Menu -->
@@ -153,11 +159,14 @@
                 <a class="nav-link" th:href="@{/alumno/evaluacion/incidencia}">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencias
                 </a>
-            </div>
+                <a class="nav-link" th:href="@{/evaluaciontutor/listar}">
+				    <i class="bi bi-briefcase me-2"></i>Evaluaciones Tutor
+				</a>
+            	</div>
                  <a class="nav-link" th:href="@{/comun/cambiar-password}">
     				<i class="bi bi-key me-2"></i>Cambio de contraseña
 				 </a>
-            
+                 
             
         </nav>
     </div>
